# zrun-backend

./: .dockerignore  .env.example  .env.sentry.example  .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  buf.yaml  justfile  pyproject.toml  pyrightconfig.json  ruff.toml  ty.toml
.claude/: hookify.code-quality.local.md  hookify.completion-checklist.local.md  hookify.dangerous-bash.local.md  hookify.sensitive-files.local.md  settings.json
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.base
docs/: bff-architecture-review-v2.md
docs/archive/: vault-migration-guide.md
scripts/: proto_compile.sh
services/zrun-analytics/: pyproject.toml
services/zrun-base/: .env.example  pyproject.toml
services/zrun-base/src/zrun_base/: __init__.py  config.py  main.py
services/zrun-base/src/zrun_base/logic/: __init__.py  sku.py
services/zrun-base/src/zrun_base/logic/domain/: __init__.py
services/zrun-base/src/zrun_base/repository/: __init__.py  mock.py  protocols.py  schema.py  sku.py  sqlite.py
services/zrun-base/src/zrun_base/repository/models/: __init__.py  sku.py
services/zrun-base/src/zrun_base/repository/repos/: __init__.py  sku.py
services/zrun-base/src/zrun_base/servicers/: __init__.py  sku_servicer.py
services/zrun-base/tests/: __init__.py  conftest.py
services/zrun-base/tests/fixtures/: __init__.py  sku.py
services/zrun-base/tests/integration/: test_sku_servicer.py
services/zrun-base/tests/unit/: test_sku_logic.py
services/zrun-bff/: README.md  pyproject.toml
services/zrun-bff/src/zrun_bff/: config.py  errors.py  main.py
services/zrun-bff/src/zrun_bff/api/pda/: sku.py
services/zrun-bff/src/zrun_bff/auth/: __init__.py  auth_deps.py  casdoor.py  constants.py  dependencies.py  middleware.py  router.py  tokens.py  utils.py  verification.py
services/zrun-bff/src/zrun_bff/clients/: __init__.py  base.py  dependencies.py  factory.py  interceptors.py  utils.py
services/zrun-bff/src/zrun_bff/jwt/: __init__.py  token.py
services/zrun-bff/src/zrun_bff/middleware/: session.py
services/zrun-bff/src/zrun_bff/secrets/: __init__.py
services/zrun-bff/tests/: conftest.py
services/zrun-bff/tests/integration/: test_api.py  test_casdoor_jwks.py  test_e2e_oauth.py  test_error_handling.py  test_oauth_flow.py
services/zrun-bff/tests/performance/: test_benchmarks.py
services/zrun-bff/tests/unit/: test_auth_dependencies.py  test_grpc_clients.py  test_jwks_endpoint.py  test_jwt.py  test_scope_validation.py  test_user_context_middleware.py
services/zrun-integration/: pyproject.toml
services/zrun-ops/: pyproject.toml
services/zrun-settlement/: pyproject.toml
services/zrun-shipping/: pyproject.toml
services/zrun-stock/: pyproject.toml
shared/zrun-core/: pyproject.toml
shared/zrun-core/src/zrun_core/: __init__.py  auth.py  config.py  database.py  errors.py  lock.py  logging.py  server.py
shared/zrun-core/src/zrun_core/auth/: __init__.py  auth.py  jwks.py  protocols.py  signing.py  verification.py
shared/zrun-core/src/zrun_core/database/: __init__.py
shared/zrun-core/src/zrun_core/domain/: __init__.py
shared/zrun-core/src/zrun_core/errors/: __init__.py  errors.py
shared/zrun-core/src/zrun_core/grpc/: __init__.py  client.py  health.py  protocols.py  server.py
shared/zrun-core/src/zrun_core/infra/: __init__.py  config.py  logging.py
shared/zrun-core/src/zrun_core/lock/: __init__.py  distributed.py  factory.py  protocol.py  protocols.py  redlock.py  single.py
shared/zrun-core/src/zrun_core/observability/: __init__.py  sentry.py
shared/zrun-core/tests/: __init__.py  conftest.py
shared/zrun-core/tests/integration/: test_jwks_integration.py
shared/zrun-core/tests/perf/: test_auth_performance.py  test_jwks_performance.py
shared/zrun-core/tests/unit/: __init__.py  test_auth.py  test_auth_di.py  test_config.py  test_errors.py  test_grpc_client.py  test_lock.py
shared/zrun-schema/: buf.gen.yaml  pyproject.toml
shared/zrun-schema/protos/: common.proto
shared/zrun-schema/protos/base/: sku.proto
shared/zrun-schema/scripts/: compile_protos.py  post_gen.py
shared/zrun-schema/src/zrun_schema/: __init__.py
