# =============================================================================
# zrun-backend Monorepo Configuration
# =============================================================================
# Production-grade Python microservices using uv workspaces.
# Python: >=3.14 | Tools: uv, ruff, basedpyright, pytest
# =============================================================================

[project]
name = "zrun-backend"
version = "0.1.0"
description = "Production-grade Python monorepo for zrun microservices"
requires-python = ">=3.14"
dependencies = []

# =============================================================================
# UV WORKSPACE
# =============================================================================

[tool.uv.workspace]
members = [
    "shared/zrun-core",
    "shared/zrun-schema",
    "services/zrun-base",
    "services/zrun-analytics",
    "services/zrun-integration",
    "services/zrun-ops",
    "services/zrun-stock",
]

[tool.uv.sources]
zrun-core = { workspace = true }
zrun-schema = { workspace = true }

# =============================================================================
# BASEDPYRIGHT (Type Checking)
# =============================================================================

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
exclude = [
    "**/tests/",
    "shared/zrun-schema/src/zrun_schema/generated/",
]
ignore = [
    "**/generated/**",
]
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportAny = "warning"
reportExplicitAny = "warning"

# =============================================================================
# RUFF (Linting & Formatting)
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    ".uv",
    "build/",
    "dist/",
    "shared/zrun-schema/src/zrun_schema/generated/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"**/generated/*.py" = ["ALL"]
"__init__.py" = ["F401"]
"**/tests/**/*.py" = ["ARG001", "TCH002", "TCH003"]
"**/*_servicer.py" = ["N802"]
"**/api/*.py" = ["TC002"]

[tool.ruff.lint.isort]
known-first-party = ["zrun_core", "zrun_schema", "zrun_base", "zrun_stock", "zrun_ops", "zrun_integration", "zrun_analytics"]

# =============================================================================
# PYTEST (Testing)
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
]
