# =============================================================================
# zrun-backend Monorepo Configuration
# =============================================================================
# Production-grade Python microservices using uv workspaces.
# Python: >=3.14 | Tools: uv, ruff, basedpyright, pytest
# =============================================================================

[project]
name = "zrun-backend"
version = "0.1.0-dev"
description = "Production-grade Python monorepo for zrun microservices"
requires-python = ">=3.14"
dependencies = []

# =============================================================================
# UV WORKSPACE
# =============================================================================

[tool.uv.workspace]
members = [
    "shared/zrun-core",
    "shared/zrun-schema",
    "services/zrun-base",
    "services/zrun-analytics",
    "services/zrun-integration",
    "services/zrun-ops",
    "services/zrun-stock",
]

[tool.uv.sources]
zrun-core = { workspace = true }
zrun-schema = { workspace = true }

# =============================================================================
# UV OVERRIDE-DEPENDENCIES (Centralized Version Control)
# =============================================================================
# Force specific versions across the entire workspace to ensure consistency.
# These take precedence over version constraints declared in member projects.
# Reference: https://docs.astral.sh/uv/concepts/resolution/#overriding-dependencies

[tool.uv]
override-dependencies = [
    # ─────────────────────────────────────────────────────────────
    # Pydantic Ecosystem
    # ─────────────────────────────────────────────────────────────
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",

    # ─────────────────────────────────────────────────────────────
    # Database & ORM
    # ─────────────────────────────────────────────────────────────
    "sqlalchemy==2.0.48",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",

    # ─────────────────────────────────────────────────────────────
    # gRPC & Protocol Buffers
    # ─────────────────────────────────────────────────────────────
    "grpcio==1.78.0",
    "grpcio-health-checking==1.78.0",
    "protobuf==6.33.5",

    # ─────────────────────────────────────────────────────────────
    # HTTP & Networking
    # ─────────────────────────────────────────────────────────────
    "httpx==0.28.1",
    "redis==7.2.1",

    # ─────────────────────────────────────────────────────────────
    # Utilities
    # ─────────────────────────────────────────────────────────────
    "structlog==25.5.0",
    "pyjwt==2.11.0",
    "python-dateutil==2.9.0.post0",
    "cachetools==7.0.2",

    # ─────────────────────────────────────────────────────────────
    # Testing (Dev Dependencies)
    # ─────────────────────────────────────────────────────────────
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",

    # ─────────────────────────────────────────────────────────────
    # Development Tools
    # ─────────────────────────────────────────────────────────────
    "basedpyright==1.38.2",
    "ruff==0.15.4",
]

# =============================================================================
# RUFF (Linting & Formatting)
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    ".uv",
    "build/",
    "dist/",
    "shared/zrun-schema/src/zrun_schema/generated/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"**/generated/*.py" = ["ALL"]
"__init__.py" = ["F401"]
"**/tests/**/*.py" = ["ARG001", "TCH002", "TCH003"]
"**/*_servicer.py" = ["N802"]
"**/api/*.py" = ["TC002"]

[tool.ruff.lint.isort]
known-first-party = ["zrun_core", "zrun_schema", "zrun_base", "zrun_stock", "zrun_ops", "zrun_integration", "zrun_analytics"]

# =============================================================================
# PYTEST (Testing)
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "basedpyright",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
