# =============================================================================
# zrun-backend Monorepo Configuration
# =============================================================================
# Production-grade Python microservices using uv workspaces.
# Python: >=3.14 | Tools: uv, ruff, ty, pytest
# =============================================================================

[project]
name = "zrun-backend"
version = "0.1.0-dev"
description = "Production-grade Python monorepo for zrun microservices"
requires-python = ">=3.14"
dependencies = []

# =============================================================================
# UV WORKSPACE
# =============================================================================

[tool.uv.workspace]
members = [
    "shared/zrun-core",
    "shared/zrun-schema",
    "services/zrun-base",
    "services/zrun-analytics",
    "services/zrun-integration",
    "services/zrun-ops",
    "services/zrun-stock",
]

[tool.uv.sources]
zrun-core = { workspace = true }
zrun-schema = { workspace = true }

# =============================================================================
# UV OVERRIDE-DEPENDENCIES (Centralized Version Control)
# =============================================================================
# Force specific versions across the entire workspace to ensure consistency.
# These take precedence over version constraints declared in member projects.
# Reference: https://docs.astral.sh/uv/concepts/resolution/#overriding-dependencies

[tool.uv]
override-dependencies = [
    # ─────────────────────────────────────────────────────────────
    # Pydantic Ecosystem
    # ─────────────────────────────────────────────────────────────
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",

    # ─────────────────────────────────────────────────────────────
    # Database & ORM
    # ─────────────────────────────────────────────────────────────
    "sqlalchemy==2.0.48",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "greenlet>=3.0.0",  # Required by SQLAlchemy async (aiosqlite doesn't include it)

    # ─────────────────────────────────────────────────────────────
    # gRPC & Protocol Buffers
    # ─────────────────────────────────────────────────────────────
    "grpcio==1.78.0",
    "grpcio-health-checking==1.78.0",
    "protobuf==6.33.5",

    # ─────────────────────────────────────────────────────────────
    # HTTP & Networking
    # ─────────────────────────────────────────────────────────────
    "httpx==0.28.1",
    "redis==7.2.1",

    # ─────────────────────────────────────────────────────────────
    # Utilities
    # ─────────────────────────────────────────────────────────────
    "structlog==25.5.0",
    "pyjwt==2.12.1",
    "python-dateutil==2.9.0.post0",
    "cachetools==7.0.5",

    # ─────────────────────────────────────────────────────────────
    # Testing (Dev Dependencies)
    # ─────────────────────────────────────────────────────────────
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",

    # ─────────────────────────────────────────────────────────────
    # Development Tools
    # ─────────────────────────────────────────────────────────────
    "ty==0.0.24",
    "ruff==0.15.7",
    "pyright==1.1.408"      # For claude code lsp
]

# =============================================================================
# PYTEST (Testing)
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pyright"       # For claude code lsp
]
