[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrun-settlement"
version = "0.1.0-dev"
description = "Settlement service for zrun"
requires-python = ">=3.14"
dependencies = [
    "zrun-core",
    "zrun-schema",
]

[project.scripts]
zrun-settlement = "zrun_settlement.main:main"

[dependency-groups]
dev = [
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
zrun-core = { workspace = true }
zrun-schema = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/zrun_settlement"]
