[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrun-core"
version = "0.1.0-dev"
description = "Core infrastructure library for zrun services"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite",
    "asyncpg",
    "cachetools",
    "grpcio",
    "grpcio-health-checking",
    "httpx",
    "python-dateutil",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings",
    "redis[hiredis]",
    "sqlalchemy[asyncio]",
    "structlog",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.uv.sources]
zrun-schema = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/zrun_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
