[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrun-schema"
version = "0.1.0"
description = "Proto definitions and generated code for zrun services"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.60.0,<2.0.0",
    "protobuf>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zrun_schema"]
