[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrun-schema"
version = "0.1.0-dev"
description = "Proto definitions and generated code for zrun services"
requires-python = ">=3.14"
dependencies = [
    "grpcio",
    "protobuf",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zrun_schema"]
